Add dashboard endpoint to api-gateway
